<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Walking Group</string>
    <string name="group_name">Mango</string>
    <string name="api_key" tools:ignore="TypographyDashes">554A5363-0A29-4A73-9821-47B1B7E392DB3</string>
    <string name="api_key_working">This is %1$s\'s API key: %2$s</string>
    <string name="post_log_in_message">User %1$s has logged in!</string>
    <string name="token_set">Token has been set as %1$s.</string>
    <string name="user_not_logged_in">You must first login</string>
    <string name="monitors_btn_content">View Users Monitored</string>
    <string name="monitored_by_btn_content">View Users Monitoring Me</string>
    <string name="monitors_subtitle">Users You Monitor</string>
    <string name="monitored_by_subtitle">Users Monitoring You</string>
    <string name="add_user_subtitle">Add User %1$s</string>
    <string name="monitors_textView_content">Accounts you monitor:</string>
    <string name="monitored_by_textView_content">Accounts monitoring you:</string>
    <string name="add_user_to_monitor_text">Add user to monitor</string>
    <string name="add_user_to_monitor_you_text">Add user to monitor you</string>
    <string name="delete_item_textView_content">Long click on a user to delete </string>
    <string name="add_item_textView_content">Click on a user to add to the list</string>
    <string name="user_name_textView_content">Name: %1$s</string>
    <string name="user_email_textView_content">Email: %1$s</string>
    <string name="user_time_sent_textView_content">Time Sent: %1$s</string>
    <string name="delete_item_question">Are you sure you want to delete this user from the list?</string>
    <string name="add_item_question">Are you sure you want to add this user to the list?</string>
    <string name="add_to_group_question">Are you sure you want to add this user to the group?</string>
    <string name="remove_from_group_question">Are you sure you want to remove this user from the group?</string>
    <string name="positive_response">Yes, I\'m sure</string>
    <string name="help_positive_response">OK</string>
    <string name="negative_response">No</string>
    <string name="title_activity_map">Map</string>
    <string name="user_requested_to_be_added">A request has been sent to add %1$s</string>
    <string name="user_edited">%1$s has been edited</string>
    <string name="user_name">Username</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_user">Already have an account? <b> Login here</b></string>
    <string name="default_name">No user</string>
    <string name="login_button">Login</string>
    <string name="create_user_text">Don\'t have an account? <b> Create one here</b></string>
    <string name="create_user_button">Create Account</string>
    <string name="logout_button">Logout</string>
    <string name="empty_error_toast">Email and password cannot be empty</string>
    <string name="random_long">12345</string>
    <string name="save_id">Save - id</string>
    <string name="save_username">Save - username</string>
    <string name="save_user_email">Save - email</string>
    <string name="save_user_password">Save - password</string>
    <string name="save_token">Save - token</string>
    <string name="login_subtitle">Login</string>
    <string name="new_user_subtitle">New User</string>
    <string name="main_menu_subtitle">Main Menu</string>
    <string name="welcome_message">Welcome %1$s</string>
    <string name="user_removed_message">A request has been sent to remove %1$s</string>
    <string name="reveals_nearby_places">Reveals nearby places</string>
    <string name="search_address">Search address</string>
    <string name="address_of_destination">Destination </string>
    <string name="address_of_meeting_point">Meeting Place</string>
    <string name="help_icon_description">Help icon</string>
    <string name="enter_your_group_name_here">Enter your group name here</string>
    <string name="group_name_2">Group Name:</string>
    <string name="result_ok">result ok</string>
    <string name="cancelled">cancelled</string>
    <string name="empty" />
    <string name="login_btn_clicked">loginBtn button clicked</string>
    <string name="now_have_token"><![CDATA[--> NOW HAVE TOKEN:]]></string>
    <string name="check_inputs">Check inputs</string>
    <string name="called_for_monitors">Called for monitors</string>
    <string name="used_adpater">Used adapter</string>
    <string name="user_info">user Info</string>
    <string name="exception">Exception: %s</string>
    <string name="choose_group_name">Choose your Group Name!</string>
    <string name="permission_granted_message">Yes!!! Permission granted.</string>
    <string name="permission_denied_message">Must allow Fine Location Access to utilize features</string>
    <string name="location_null">Current location is null. Using defaults.</string>
    <string name="specify_meet_and_destination_points">You must specify a meeting point and a destination point</string>
    <string name="group_name_dialog">GroupNameDialog</string>
    <string name="meeting_point_title">Meeting Point</string>
    <string name="destination_title">Destination</string>
    <string name="destination_title_for_group">%1$s group\'s destination</string>
    <string name="group_title">%1$s</string>
    <string name="messages_text">%1$s</string>
    <string name="messages_num_text">%1$d</string>
    <string name="map_btn_content">View Map</string>
    <string name="email_error_text"><b>Email must be in format example@example.com</b></string>
    <string name="birth_month_error_text">
        <b>
            Birth month must be minimum 1 representing January and maximum 12 representing December.
        </b>
    </string>
    <string name="birth_year_error_text">
        <b>
            Birth year must be minimum 1897 and maximum 2018.
        </b>
    </string>
    <string name="account_created">Account has been created. Enter email and password to login</string>
    <string name="password_error_text">
        <b>
            Your password must meet the following criteria:\n
            <li> Must be at least eight (8) characters long\n</li>
            <li> Must contain both uppercase and lowercase letters\n</li>
            <li> Must contain a number\n</li>
        </b>
    </string>
    <string name="help">Help</string>
    <string name="map_activity_help_dialog_message">
        In order to create a new walking group first enter the meeting place
        in the provided entry area at the top.
        \n\n
        Then click enter and proceed to enter the desired destination for
        your walking group.
        \n\n
        If you are unsure of the exact address you can click on the map icon.
        \n\n
        The first time you click it, use the search bar to pick your meeting place.
        The second time you click it, use the search bar to pick your destination.
        \n\n
        A plus icon will then appear.
        \n\n
        Clicking on this icon will allow you to enter a name for your
        walking group after which your group will be saved.
        \n\n
    </string>
    <string name="dashboard_map_help_dialog_message">
        Welcome to your dashboard map. Here is where you can see the GPS locations and
        timestamps for users you monitor along with the leaders of the groups they are in.
        \n\n
        Whenever you want to update the GPS locations to get
        the most recent updates click the blue add marker icon.
        \n\n
        Clicking on a user will reveal when their location information was last updated.
    </string>
    <string name="how_to_use_the_app">How to use the app:</string>
    <string name="group_updated">The group: %1$s has been updated</string>
    <string name="group_name_requirement">Group name must contain at least one character</string>
    <string name="user_question">What would you like to do with %1$s walking group?</string>
    <string name="add_user_to_group">Add a user to the group</string>
    <string name="remove_user_from_group">Remove a user from the group</string>
    <string name="add_to_group_textView_content">Click on a user to add to the group</string>
    <string name="remove_from_group_textView_content">Click on a user to remove from the group</string>
    <string name="add_to_group_subtitle">Add User To Group</string>
    <string name="remove_from_group_subtitle">Remove User From Group</string>
    <string name="clicked_user_group_leader">The clicked user is the leader of this group</string>
    <string name="help_dialog">HelpDialog</string>
    <string name="map_activity_create_subtitle">Create New Walking Group</string>
    <string name="map_activity_view_subtitle">View Walking Groups</string>
    <string name="dashboard_map_activity_subtitle">Dashboard Map Display</string>
    <string name="add_name">Click + to add a name to your walking group</string>
    <string name="done_btn_content">Done</string>
    <string name="next_btn_content">Next</string>
    <string name="mango_logo">Mango logo</string>
    <string name="walking_group_logo">Walking group logo</string>
    <string name="map_image">map image</string>
    <string name="edit_info_btn_content">View/Edit my info</string>
    <string name="edit_info_subtitle">Edit Profile Information</string>
    <string name="birth_year_hint">Year of birth</string>
    <string name="birth_month_hint">Month you were born</string>
    <string name="address_hint">Current physical address</string>
    <string name="error_icon_content_description">error icon</string>
    <string name="home_phone_hint">Home phone number</string>
    <string name="cell_phone_hint">Cell phone number</string>
    <string name="grade_hint">Current grade</string>
    <string name="teacher_name_hint">Teacher\'s name</string>
    <string name="emergency_contact_info_hint">Emergency contact information which may include the name of who you\'re monitoring, their relationship to you, their email, or their phone numbers, etc.</string>
    <string name="save_btn_content">Save</string>
    <string name="integer">%1$d</string>
    <string name="email_wrong">Incorrect email format. Email will be reset to its initial value.</string>
    <string name="birth_month_wrong">Incorrect birth month format. Birth month will be reset to its initial value</string>
    <string name="birth_year_wrong">Incorrect birth year format. Birth year will be reset to its initial value</string>
    <string name="ok_response">OK</string>
    <string name="save_new_info">Are you sure you want to save this new information? Any previous information will be lost.</string>
    <string name="user_updated">User information updated</string>
    <string name="start_gps_imageButton_textView_content">Start GPS</string>
    <string name="stop_gps_imageButton_textView_content">Stop GPS</string>
    <string name="dashboard_map_imageButton_textView_content">User Map</string>
    <string name="messaging_title_textView">Messaging</string>
    <string name="start_imageView_content_description">Start GPS Location Upload</string>
    <string name="stop_imageView_content_description">Stop GPS Location Upload</string>
    <string name="dashboard">Dashboard</string>
    <string name="view_pending_requests_btn_content">View your permission requests</string>
    <string name="todo">TODO</string>
    <string name="status_textView_content">Status: %1$s</string>
    <string name="request_details_textView_content">Request Details:\n%1$s</string>
    <string name="authorizors_textView_content">%1$s</string>
    <string name="rewards">View Rewards</string>
    <string name="view_leaderboard">View LeaderBoard</string>
    <string name="view_map_string">View Map</string>
    <string name="current_points_textView_content">Current Points: 0</string>
</resources>