<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/status_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_textView_content"
        android:textSize="18sp" />

    <Space
        android:id="@+id/space_below_status_textView"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/status_textView"/>

    <TextView
        android:id="@+id/request_details_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space_below_status_textView"
        android:text="@string/request_details_textView_content"
        android:textSize="18sp" />

    <Space
        android:id="@+id/space_below_request_details_textView"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/request_details_textView"/>

    <TextView
        android:id="@+id/authorizors_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space_below_request_details_textView"
        android:text="@string/authorizors_textView_content"
        android:textSize="18sp" />

</RelativeLayout>