<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    tools:context=".controller.main.menu.activity.MainMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="50"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:weightSum="84">

                <Button
                    android:id="@+id/launch_map_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="12"
                    android:background="@drawable/buttonshape"
                    android:text="@string/view_map_string"
                    android:textColor="#000000"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/leader_board_btn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="12"
                    android:background="@drawable/buttonshape"
                    android:text="@string/view_leaderboard"
                    android:textColor="#000000"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/monitors_btn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="12"
                    android:background="@drawable/buttonshape"
                    android:paddingBottom="0dp"
                    android:text="@string/monitors_btn_content"
                    android:textColor="#000000"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/monitored_by_btn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="12"
                    android:background="@drawable/buttonshape"
                    android:text="@string/monitored_by_btn_content"
                    android:textColor="#000000"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/edit_info_btn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="12"
                    android:background="@drawable/buttonshape"
                    android:text="@string/edit_info_btn_content"
                    android:textColor="#000000"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/view_pending_requests_btn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="12"
                    android:background="@drawable/buttonshape"
                    android:text="@string/view_pending_requests_btn_content"
                    android:textColor="#000000"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/rewards"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="12"
                    android:background="@drawable/buttonshape"
                    android:text="@string/rewards"
                    android:textColor="#000000"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/dashboard"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="100">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="25"
                    android:gravity="center"
                    android:orientation="vertical">

                    <FrameLayout
                        android:id="@+id/messaging_frameLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <ImageButton
                            android:id="@+id/messenger_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/messages_icon2" />

                        <TextView
                            android:id="@+id/messenger_btn_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            android:textSize="28sp"
                            android:textStyle="bold" />

                    </FrameLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/messaging_title_textView"
                        android:textColor="@color/colorWhiteText"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="25"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/start_gps_imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/start_imageView_content_description"
                        app:srcCompat="@drawable/start" />

                    <Space
                        android:id="@+id/space_below_start_gps_imageButton"
                        android:layout_width="0dp"
                        android:layout_height="2dp" />

                    <TextView
                        android:id="@+id/start_gps_imageButton_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_gps_imageButton_textView_content"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="25"
                    android:gravity="center"
                    android:orientation="vertical">

                    <FrameLayout
                        android:id="@+id/stop_frameLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/stop_gps_imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/stop_imageView_content_description"
                            app:srcCompat="@drawable/stop" />

                        <TextView
                            android:id="@+id/stop_gps_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            android:textColor="@color/colorWhiteText"
                            android:textSize="28sp"
                            android:textStyle="bold" />

                    </FrameLayout>

                    <TextView
                        android:id="@+id/stop_gps_imageButton_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stop_gps_imageButton_textView_content"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/last_relativeLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="25"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageButton
                        android:id="@+id/dashboard_map_imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/view_group_icon" />

                    <Space
                        android:id="@+id/space_below_dashboard_map_imageButton"
                        android:layout_width="0dp"
                        android:layout_height="2dp" />

                    <TextView
                        android:id="@+id/dashboard_map_imageButton_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_map_imageButton_textView_content"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="21dp"
                android:background="@drawable/rounded_button_logout"
                android:text="@string/logout_button" />

            <TextView
                android:id="@+id/current_points_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/current_points_textView_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
